--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -7,7 +7,7 @@ $size-l: 16px
 
 $size-h1: 30px
 $size-h2: 24px
-$size-h3: 20px
+$size-h3: 16px
 
 $color-base: #1e2031
 $color-blue: #1125c8
@@ -17,4 +17,5 @@ $color-lightgray: #dbd9e6
 $bg-base: #f5f5f6
 $bg-invert: #1e2031
 $bg-gray: #dadce0
-$bg-lightgray: #cccee3
+
+$border-color-base: #dadce0
